src/objects/SPE_Respondent__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Respondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPEPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Plan</label>
        <referenceTo>SPE_SPEPlan__c</referenceTo>
        <relationshipLabel>Survey Respondents</relationshipLabel>
        <relationshipName>Survey_Respondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Respondent</label>
    <nameField>
        <displayFormat>RDI-{00000}</displayFormat>
        <label>Respondents Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Respondents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>